# moonshine

./: .gitignore  Cargo.toml  README.md  dev.malted.moonshine.plist
src/: cellar.rs  main.rs
src/cask/: info.rs
src/formula/: formula.rs  formulae.rs  mod.rs
src/platform/: mod.rs
