[package]
name = "moonshine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["cargo", "derive"] }
mimalloc = { version = "*", default-features = false }
os_info = "3.7.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.100"
sha2 = "0.10.7"
simd-json = "0.10.5"
termcolor = "1.2.0"
terminal-link = "0.1.0"
tokio = { version = "1.29.1", features = ["full"] }
